...
    <!-- Alert Dialog -->
    <string name="please_connect_your_phone_to_internet">Please Connect Your Phone To Internet</string>
    <string name="connexion_required">Connexion Required</string>
    <string name="please_connect">Please connect your device and click \"Done\"</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="no_match">No Match</string>
    <string name="sorry_dont_found_place">Sorry, we no found any place</string>
    <string name="sorry_no_phone">Sorry, this restaurant hasn’t added a phone number yet.</string>
    <string name="sorry_no_website">Sorry, this restaurant hasn’t added a website yet.</string>
    <string name="warning">Warning !</string>
    <string name="cancel_btn">Cancel</string>
    <string name="ok_btn">OK</string>
...
    <!-- Menu -->
    <string name="map_view">Map View</string>
    <string name="list_view">List View</string>
    <string name="workmates">Workmates</string>
    <string name="your_lunch">Your Lunch</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>

    <!-- Notification -->
    <string name="notification_title">Don\’t forget your meal</string>
    <string name="notification_message">Today you eat at</string>
    <string name="notification_joining">This friends join you : </string>

...
