<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/login_activity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/lunch_portrait_v1"
        android:fillViewport="true"
        tools:context=".MainActivity">

...
                app:layout_constraintTop_toBottomOf="@+id/text_view2"
                tools:ignore="RtlSymmetry" />



        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/iden_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginStart="@dimen/margin_login_button"
                android:layout_marginTop="@dimen/button_margin_top"
                android:layout_marginEnd="@dimen/margin_login_button"
                android:background="@drawable/button_login_iden"
...
