<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/call_details"
            android:enabled="true"
            android:icon="@drawable/ic_call_black_24dp"
            android:title="@string/call"
            app:showAsAction="ifRoom" />

    <item
            android:id="@+id/like_details"
            android:enabled="true"
            android:icon="@drawable/ic_star"
            android:title="@string/like"
            app:showAsAction="ifRoom" />

    <item
            android:id="@+id/website_details"
            android:enabled="true"
            android:icon="@drawable/baseline_public_24"
            android:title="@string/website"
            app:showAsAction="ifRoom" />
</menu>